syntax = "proto3";

package coordination;

option go_package = "github.com/streamnative/oxia/proto";

import "proto/client.proto";

// controller -> node
service OxiaControl {
  rpc ShardAssignment(stream io.streamnative.oxia.proto.ShardAssignmentsResponse) returns (CoordinationEmpty) {}

  rpc Fence(FenceRequest) returns (FenceResponse);
  rpc BecomeLeader(BecomeLeaderRequest) returns (BecomeLeaderResponse) {}
  rpc AddFollower(AddFollowerRequest) returns (CoordinationEmpty) {}

}

// node (leader) -> node (follower)
service OxiaLogReplication {
  rpc Truncate(TruncateRequest) returns (TruncateResponse) {}
  rpc AddEntries(stream AddEntryRequest) returns (stream AddEntryResponse) {}
}

message ServerAddress {
  string internal_url = 1;
  string public_url = 2;
}

message EntryId {
  uint64 epoch = 1;
  uint64 offset = 2;
}

message LogEntry {
  EntryId entry_id = 1;
  bytes value = 2;
  uint64 timestamp = 3;
}

message CoordinationEmpty {}

message FenceRequest {
  uint32 shard_id = 1;

  uint64 epoch = 2;
}
message FenceResponse {
  uint64 epoch = 1;
  EntryId head_index = 2;
}

message BecomeLeaderRequest {
  message FollowerEntry {
    ServerAddress key = 1;
    EntryId value = 2;
  }

  uint32 shard_id = 1;

  uint64 epoch = 2;
  uint32 replication_factor = 3;
  repeated FollowerEntry follower_maps = 4;
}

message BecomeLeaderResponse {
  uint64 epoch = 1;
}

message AddFollowerRequest {
  uint32 shard_id = 1;

  uint64 epoch = 2;
  ServerAddress follower = 3;
  EntryId head_index = 4;
}

message TruncateRequest {
  uint32 shard_id = 1;

  uint64 epoch = 2;
  EntryId head_index = 3;
  string source = 4;
}

message TruncateResponse {
  uint64 epoch = 1;
  EntryId head_index = 2;
}

message AddEntryRequest {
  uint64 epoch = 1;
  LogEntry entry = 2;
  EntryId commit_index = 3;
}
message AddEntryResponse {
  uint64 epoch = 1;
  EntryId entry_id = 2;
  bool invalid_epoch = 3;
}
